--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,17 @@
 {
   "dependencies": {
+    "com.adrenak.restsharp.unity": "1.1.0",
     "com.unity.collab-proxy": "2.0.5",
+    "com.unity.editorcoroutines": "1.0.0",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.feature.mobile": "1.0.0",
     "com.unity.ide.rider": "3.0.24",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.remote-config": "3.3.2",
+    "com.unity.services.cloudcode": "2.4.0",
+    "com.unity.services.core": "1.11.0",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
@@ -42,8 +47,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.adrenak.restsharp.unity": "1.1.0"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
@@ -58,7 +62,8 @@
       "url": "https://package.openupm.com",
       "scopes": [
         "com.adrenak.restsharp.unity",
-        "com.openupm"
+        "com.openupm",
+        "me.caneva20.config-assets"
       ]
     }
   ]
